Bug 1734646 - Unify Urlbar bookmark star colors. r=dao,amy a=RyanVM
This variable [is also referenced](https://searchfox.org/mozilla-central/rev/763b888847ac7291248b62ef3ab99da6ba2332d6/browser/themes/shared/urlbar-searchbar.inc.css#352) in #star-button[starred].

Differential Revision: https://phabricator.services.mozilla.com/D127838

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -576,7 +576,7 @@
 }
 
 #reader-mode-button[readeractive] > .urlbar-icon {
-  fill: var(--toolbarbutton-icon-fill-attention);
+  fill: var(--lwt-toolbar-field-icon-fill-attention, var(--toolbarbutton-icon-fill-attention));
   fill-opacity: 1;
 }
 
