Bug 1734347 - Improve appearance of searchbar in overflow panel. r=dao, a=RyanVM
Differential Revision: https://phabricator.services.mozilla.com/D127723

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -26,6 +26,10 @@
   margin-inline: @urlbarMarginInline@;
 }
 
+#search-container[cui-areatype="menu-panel"] {
+  margin: var(--arrowpanel-menuitem-margin);
+}
+
 :root[uidensity=touch] #urlbar-container,
 :root[uidensity=touch] #search-container {
   padding-block: 5px;
@@ -631,6 +635,15 @@
 
 #search-container {
   min-width: 125px;
+}
+
+#search-container[cui-areatype="menu-panel"] > #searchbar:-moz-lwtheme {
+  /* Theme authors usually only consider contrast against the toolbar when
+     picking a border color for the search bar. Since the search bar can be
+     dragged into the overflow panel, we need to show a high-contrast border
+     around the searchbar in case the searchbar and panel background are the
+     same color. */
+  border-color: var(--panel-separator-color);
 }
 
 .searchbar-search-button {
