Bug 1735976 - Update Firefox Suggest preferences: Part 4 - Migrate suggest.quicksuggest to suggest.quicksuggest.nonsponsored. r=nanj a=RyanVM
Now that we're likely not targeting a 94 dot release anymore, I'd like to go
ahead and rename the `suggest.quicksuggest` pref to
`suggest.quicksuggest.nonsponsored` as we considered doing before. There won't
be a better time to do it.

Depends on D128665

Differential Revision: https://phabricator.services.mozilla.com/D130565

--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -659,7 +659,7 @@
         <html:input id="firefoxSuggestNonsponsoredToggle"
                     type="checkbox"
                     class="toggle-button firefoxSuggestToggle"
-                    preference="browser.urlbar.suggest.quicksuggest"
+                    preference="browser.urlbar.suggest.quicksuggest.nonsponsored"
                     aria-labelledby="firefoxSuggestNonsponsoredLabel"
                     aria-describedby="firefoxSuggestNonsponsoredDescription"/>
       </hbox>
