--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -645,7 +645,7 @@
         <html:input id="firefoxSuggestNonsponsoredToggle"
                     type="checkbox"
                     class="toggle-button firefoxSuggestToggle"
-                    preference="browser.urlbar.suggest.quicksuggest"
+                    preference="browser.urlbar.suggest.quicksuggest.nonsponsored"
                     aria-labelledby="firefoxSuggestNonsponsoredLabel"
                     aria-describedby="firefoxSuggestNonsponsoredDescription"/>
       </hbox>
