--- a/floorp/browser/themes/designs/options/delete-border.css
+++ b/floorp/browser/themes/designs/options/delete-border.css
@@ -15,8 +15,13 @@
     background: var(--toolbar-bgcolor) !important;
     background-color: var(--toolbar-bgcolor) !important;
   }
-  
-  :root[lwt-default-theme-in-dark-mode="true"] #tabbrowser-tabpanels, :root[style*="--lwt-accent-color: rgb(28, 27, 34)"] #tabbrowser-tabpanels {
+
+  :root[lwt-default-theme-in-dark-mode="true"] #tabbrowser-tabpanels, :root[style*="--lwt-accent-color: rgb(28, 27, 34)"] #tabbrowser-tabpanels[flex] {
+    background: var(--toolbar-bgcolor) !important;
+    background-color: var(--toolbar-bgcolor) !important;
+  }
+
+  #tabbrowser-tabbox[flex], #tabbrowser-tabpanels, browser[type="content-primary"], browser[type="content"] > html{
     background: var(--toolbar-bgcolor) !important;
     background-color: var(--toolbar-bgcolor) !important;
   }
