Bug 1816729 - Implement the impression event for refinement buttons and shopping tabs - r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D173691

--- a/browser/components/search/test/browser/searchTelemetryAd_components_visibility.html
+++ b/browser/components/search/test/browser/searchTelemetryAd_components_visibility.html
@@ -6,27 +6,39 @@
 </head>
 <body>
   <section id="top">
-    <div style="display: flex;">
+    <div style="display: flex; gap: 20px;">
       <div>
         <h5 test-label="true">ad_link</h5>
         <!-- The parent size exceeds the window height but the first ad link is above the fold. -->
-        <div class="moz_ad" style="padding-bottom: 000px;">
+        <div class="moz_ad" style="padding-bottom: 2000px;">
           <a href="https://example.com/ad">Ad Link</a>
         </div>
       </div>
       <div>
+        <h5 test-label="true" >ad_link</h5>
+        <a href="https://example.com/ad">Ad Link</a>
+      </div>
+      <!-- The ad links are below the fold but the test will scroll to it before the impression is recorded. -->
+      <div>
         <h5 test-label="true">ad_link</h5>
-        <!-- The ad link is below the fold but the test will scroll to it before the impression is recorded. -->
         <div id="second-ad" class="moz_ad" style="padding-top: 2000px;">
           <a href="https://example.com/ad">Ad Link</a>
         </div>
       </div>
       <div>
+        <h5 test-label="true" style="margin-bottom: 2000px;">ad_link</h5>
+        <a href="https://example.com/ad">Ad Link</a>
+      </div>
+      <!-- The ad links are below the fold and shouldn't be viewed in the test. -->
+      <div>
         <h5 test-label="true">ad_link</h5>
-        <!-- The parent is above the fold, but the ad link is below the fold and never viewed in the test. -->
         <div class="moz_ad" style="padding-top: 4000px;">
           <a href="https://example.com/ad">Ad Link</a>
         </div>
+      </div>
+      <div>
+        <h5 test-label="true" style="margin-bottom: 4000px;">ad_link</h5>
+        <a href="https://example.com/ad">Ad Link</a>
       </div>
     </div>
   </section>
