[FB] preferences | fix typo

--- a/browser/components/preferences/main.inc.xhtml
+++ b/browser/components/preferences/main.inc.xhtml
@@ -106,7 +106,7 @@
                id="tabscroll" preference="toolkit.tabbox.switchByScrolling"/>
 
     <checkbox  data-l10n-id="enable-double-click-block" 
-               id="dobleClockClose" preference="browser.tabs.closeTabByDblclick"/>
+               id="doubleClickClose" preference="browser.tabs.closeTabByDblclick"/>
 
     <checkbox  data-l10n-id="enable-show-pinned-tabs-title"
                id="showPinnedTabsTitle" preference="floorp.tabs.showPinnedTabsTitle"/>
