Bug 1818513 - The Learn more text of moz-support-link should not break across lines. r=tgiles,settings-reviewers,mconley
Differential Revision: https://phabricator.services.mozilla.com/D174337

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -467,6 +467,11 @@ richlistitem[selected] .actionsMenu:focus-visible {
   margin-inline-start: 0;
 }
 
+a[is="moz-support-link"] {
+  display: inline-block;
+  white-space: initial;
+}
+
 /* Search Pane */
 
 #engineList {
