Bug 1610741 - DoH Settings UI: Show error reason in Not Available label r=Gijs,kershaw,fluent-reviewers,necko-reviewers,settings-reviewers,flod
- The patch saves the confirmation channel's status and skipReason in the TRR Service
- The UI queries the status and displays the stringified version in the Not Available (reason) label
- Introduces doh-status-label CSS rule so the Learn-More link isn't off center

Differential Revision: https://phabricator.services.mozilla.com/D174110

--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -1204,9 +1204,16 @@
     />
   </vbox>
   <vbox id="dohStatusSection" class="privacy-detailedoption info-box-container">
-    <label id="dohStatus"/>
-    <label id="dohResolver"/>
-    <label id="dohSteeringStatus" data-l10n-id="preferences-doh-steering-status" hidden="true"/>
+    <hbox>
+      <label id="dohStatus" class="doh-status-label tail-with-learn-more"/>
+      <html:a is="moz-support-link"
+            id="dohStatusLearnMore"
+            class="learnMore"
+            support-page="firefox-dns-over-https"
+            hidden="true"/>
+    </hbox>
+    <label class="doh-status-label" id="dohResolver"/>
+    <label class="doh-status-label" id="dohSteeringStatus" data-l10n-id="preferences-doh-steering-status" hidden="true"/>
   </vbox>
   <vbox>
     <label><html:h2 id="dohGroupMessage" data-l10n-id="preferences-doh-group-message"/></label>
